# traditional-ml-concepts

./: .gitignore  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt
notebooks/: 01_linear_regression.ipynb  02_logistic_regression.ipynb
src/models/: linear_models.py
